--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DetailMovie"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".DetailMovie"
+            android:theme="@style/fulltheme"></activity>
+        <activity android:name=".MainActivity"
+           >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
